--- a/packages/components/Progress/ProgressBar.html
+++ b/packages/components/Progress/ProgressBar.html
@@ -1,5 +1,5 @@
 <div class="progress-bar {progressClass}" {style}>
-  {#if typeof progress === undefined}
+  {#if typeof progress === 'undefined'}
     <div class="progress"></div>
   {:else}
     <div class="progress" style="width: {progress}%;"></div>
