WIP: AppBar tests.

--- a/packages/components/AppBar/AppBar.html
+++ b/packages/components/AppBar/AppBar.html
@@ -54,17 +54,21 @@
       /** Listen for route changes and appbar prop changes */
       root.on('appbar:modify', state => this.set(state));
 
+      /* istanbul ignore else */
       if (root.router) {
         root.router.on('update', ({ changed, current }) => {
+          /* istanbul ignore else */
           if (changed.context && current.context) {
             this.set({ _location: current.context.path });
           }
         });
       }
 
+      /* istanbul ignore else */
       if (root.meta) {
         root.meta.set({ _hasAppbar: true });
         root.meta.on('update', ({ changed, current }) => {
+          /* istanbul ignore else */
           if (changed.navigable) {
             this.set({ _isNavigationEnabled: current.navigable });
           }
@@ -72,6 +76,7 @@
       }
     },
     ondestroy() {
+      /* istanbul ignore else */
       if (this.root.meta) {
         this.root.meta.set({ _hasAppbar: false });
       }
@@ -88,11 +93,13 @@
           return this.root.close();
         }
 
+        /* istanbul ignore else */
         if (this.root.router) {
           this.root.router.go('/');
         }
       },
       goBack() {
+        /* istanbul ignore else */
         if (this.root.router) {
           this.root.router.back();
         }
