Add initial tests and basic coverage (#247)
* Add first component test :tada:

* Allow console.log's to appear in jest

* Add basic tests for switch component

* Add basic tests for sprite component

* Add test:watch

* Add jest-canvas-mock to setupfiles and jest-canvas-mock module.

* Add QRCode tests.

* Ignore lines for test.

* Add icon component test.

* Add simulator to test setup. Add printable initial tests.

* Fix printable tests overlapping each other

* Remove extra event listeners for dialogs

* Add tests for Dialogs

* Stop npm warning

* Prevent eslint from warning about extraneous dependencies on
virtual-files

* Branch up

* Add ProgressBar test file

* Add src check test

* Add tests for multiple logo and size combinations

* Normalize test variable names

* Add round icon tests and fix.

* Add collection test.

* Fix collection test suite

* Fix collection test suite

* Create ProgressBar test

* Create better describes

* Move keystroke register logic to external js

* Add tests for <Keystroke />

* Update Progressbar test

* Fix Keystroke test

* Create the most basic test ever for ~circular component~

* Add <App/> tests

* Check if currentApp is defined before closing an app

* Add switch component as dev dependency

* Fix fire event triggering after click handle

* WIP: add Row test.

* Fix compiling of Screen.html

* Update dependencies

* Add .toggle() method to <Switch/>

* Better coverage for Row

* WIP: Add appbar and modifier tests.

* Align progress tests with rest of component tests

* Fix coverage issues on App, Printable and QRCOde

* Switch meta events with meta methods

* Deprecate root events in favour of methods

* WIP: dummy app component.

* WIP: AppBar tests.

* [WIP] Make tests pass again. Vai que é tua lancelloti

* Fix dummy app and tested component initialization event cycles

* Convert sprite test to new env

* Fix dummy a

--- a/packages/components/AppBar/AppBar.html
+++ b/packages/components/AppBar/AppBar.html
@@ -54,26 +54,31 @@
       /** Listen for route changes and appbar prop changes */
       root.on('appbar:modify', state => this.set(state));
 
+      /* istanbul ignore else */
       if (root.router) {
         root.router.on('update', ({ changed, current }) => {
+          /* istanbul ignore else */
           if (changed.context && current.context) {
             this.set({ _location: current.context.path });
           }
         });
       }
 
+      /* istanbul ignore else */
       if (root.meta) {
-        root.meta.set({ hasAppbar: true });
+        root.meta.set({ _hasAppbar: true });
         root.meta.on('update', ({ changed, current }) => {
-          if (changed.navigation) {
-            this.set({ _isNavigationEnabled: current.navigation });
+          /* istanbul ignore else */
+          if (changed.navigable) {
+            this.set({ _isNavigationEnabled: current.navigable });
           }
         });
       }
     },
     ondestroy() {
+      /* istanbul ignore else */
       if (this.root.meta) {
-        this.root.meta.set({ hasAppbar: false });
+        this.root.meta.set({ _hasAppbar: false });
       }
     },
     onstate({ changed, current }) {
@@ -85,14 +90,16 @@
       goHome() {
         const { _isAtHome } = this.get();
         if (_isAtHome) {
-          return this.root.fire('close');
+          return this.root.close();
         }
 
+        /* istanbul ignore else */
         if (this.root.router) {
           this.root.router.go('/');
         }
       },
       goBack() {
+        /* istanbul ignore else */
         if (this.root.router) {
           this.root.router.back();
         }
