--- a/packages/components/Collection/Row.html
+++ b/packages/components/Collection/Row.html
@@ -3,7 +3,7 @@
     <div class="top {_hasController ? 'has-controller' : ''}">
       <div class="label">{label}</div>
       {#if _hasController}
-        <div ref:controller>
+        <div class="controller" ref:controller>
           {#if href}
             <Icon symbol="chevron-right" width="10px" />
           {:elseif _hasCustomController}
@@ -25,6 +25,7 @@
 </div>
 
 <script>
+  /* istanbul ignore next */
   function findClosest(el, cb) {
     if (!el || el.nodeType !== 1) return null;
     if (el && !cb(el)) return findClosest(el.parentNode, cb);
@@ -60,12 +61,15 @@
         });
       }
 
-      const { shortcut } = this.options.data;
       /**
        * TODO: Refactor to pass as prop when undefined props are not rendered on the element
        */
-      if (this.options.data.shortcut) {
-        this.refs.main.setAttribute('shortcut', shortcut);
+      if (this.options.data) {
+        const { shortcut } = this.options.data;
+
+        if (shortcut) {
+          this.refs.main.setAttribute('shortcut', shortcut);
+        }
       }
     },
     onupdate({ changed, current }) {
@@ -75,6 +79,9 @@
     },
     methods: {
       _handleClick({ event, href }) {
+        /** Fire the row's click event for listening parent components */
+        this.fire('click');
+
         /** If clicked on a "link" row, push the page to the router */
         if (href && this.root.router) {
           return this.root.router.go(href);
@@ -87,26 +94,24 @@
          */
         if (_hasCustomController) {
           /** Prevent firing the event twice (because of event bubbling) */
-          const hasNotClickedController = !findClosest(
-            event.target,
-            el => el.getAttribute('slot') === 'controller',
+          const hasNotClickedController = !findClosest(event.target, el =>
+            el.classList.contains('controller'),
           );
+
           if (hasNotClickedController) {
             const triggerEl = this.refs.controller.querySelector(
               '[data-controller-trigger]',
             );
+
+            /* istanbul ignore else */
             if (triggerEl) {
               /** ! We assume that the trigger is also
                * the element method that triggers it (like click)
                * */
               triggerEl[triggerEl.dataset.controllerTrigger]();
-              return;
             }
           }
         }
-
-        /** Fire the row's click event for listening parent components */
-        this.fire('click');
       },
     },
   };
