--- a/packages/components/App/App.html
+++ b/packages/components/App/App.html
@@ -1,4 +1,7 @@
-<svelte:window on:keyup="onKeyup(event)" on:keydown="onKeydown(event)"/>
+<svelte:window
+  on:keyup="_onKeyup(event)"
+  on:keydown="_onKeydown(event)"
+/>
 
 <div class="app">
   <slot></slot>
@@ -7,10 +10,10 @@
 <script>
   import App from '@mamba/pos/api/app.js';
   import Keyboard from '@mamba/pos/api/keyboard.js';
-  import Keystroke from '@mamba/app/Keystroke.html';
+  import { hasActiveHandlerFor } from './includes/KeystrokeRegister.js';
 
   /** Return if a certain shortcut key is valid */
-  const isValidShortcut = (keyName, e) =>
+  const isInputFocused = (keyName, e) =>
     keyName &&
     e.target.tagName !== 'INPUT' &&
     document.activeElement.tagName !== 'INPUT';
@@ -18,33 +21,53 @@
   export default {
     data() {
       return {
-        navigation: { home: true, back: true },
+        navigable: { home: true, back: true },
         shortcuts: true,
         scrollable: true,
-        hasAppbar: false,
+        _hasAppbar: false,
       };
     },
     oncreate() {
       const { root } = this;
 
-      root.on('navigation', (navigation = { home: true, back: true }) => {
-        if (typeof navigation === 'boolean') {
-          this.set({ navigation: { home: navigation, back: navigation } });
-        } else {
-          this.set({
-            navigation: Object.assign({}, this.get().navigation, navigation),
-          });
+      // TODO: Deprecate this sometime
+      root.on('navigation', isEnabled => {
+        /* istanbul ignore next */
+        if (__DEV__) {
+          console.warn(
+            "[@mamba/app] this.root.fire('navigation') is deprecated. Use this.root.meta.setNavigable()",
+          );
         }
+        this.setNavigable(isEnabled);
       });
 
-      root.on('shortcuts', value => this.set({ shortcuts: value }));
+      root.on('shortcuts', isEnabled => {
+        /* istanbul ignore next */
+        if (__DEV__) {
+          console.warn(
+            "[@mamba/app] this.root.fire('shortcuts') is deprecated. Use this.root.meta.setShortcuts()",
+          );
+        }
+        this.setShortcuts(isEnabled);
+      });
 
-      root.on('close', () => {
+      root.close = () => {
         /** Allow to override the default app close process */
         if (typeof root.onClose === 'function') {
           return root.onClose();
         }
         App.close();
+      };
+
+      root.on('close', () => {
+        /* istanbul ignore next */
+        if (__DEV__) {
+          console.warn(
+            "[@mamba/app] this.root.fire('close') is deprecated. Use this.root.close()",
+          );
+        }
+
+        root.close();
       });
     },
     onstate({ previous }) {
@@ -60,36 +83,47 @@
         rootEl.classList.toggle('no-scroll', !current.scrollable);
       }
 
-      if (changed.hasAppbar) {
-        rootEl.classList.toggle('has-appbar', current.hasAppbar);
+      if (changed._hasAppbar) {
+        rootEl.classList.toggle('has-appbar', current._hasAppbar);
       }
     },
     methods: {
-      _goBack() {
-        if (this.root.router && this.root.router.get().path !== '/') {
-          this.root.router.back();
+      setShortcuts(isEnabled) {
+        this.set({ shortcuts: isEnabled });
+      },
+      setScrollable(isEnabled) {
+        this.set({ scrollable: isEnabled });
+      },
+      setNavigable(navigable) {
+        if (typeof navigable === 'boolean') {
+          this.set({ navigable: { home: navigable, back: navigable } });
+        } else {
+          this.set({
+            navigable: {
+              ...this.get().navigable,
+              ...navigable,
+            },
+          });
         }
       },
-      isNavigationEnabled() {
-        const { home, back } = this.get().navigation;
-        return home && back;
-      },
       /** Prevent default back/enter button behaviour */
-      onKeydown(e) {
+      _onKeydown(e) {
         const keyName = Keyboard.getKeyName(e.keyCode);
         if (
           (keyName === 'back' || keyName === 'enter') &&
-          isValidShortcut(keyName, e)
+          isInputFocused(keyName, e)
         ) {
           e.preventDefault();
+          e.stopPropagation();
+          return false;
         }
       },
-      onKeyup(e) {
+      _onKeyup(e) {
         const keyName = Keyboard.getKeyName(e.charCode || e.which || e.keyCode);
-
-        if (Keystroke.hasActiveHandler(keyName)) {
+        if (e.defaultPrevented || hasActiveHandlerFor(keyName)) {
           return;
         }
+
         const { shortcuts: shortcutsEnabled } = this.get();
 
         /**
@@ -102,22 +136,24 @@
             !shortcutsEnabled ||
             (shortcutsEnabled && !document.querySelector('[shortcut="close"]'))
           ) {
-            this.root.fire('close');
+            this.root.close();
             return;
           }
         }
 
         /** If the key is not mapped or a input is focused, do nothing */
-        if (!isValidShortcut(keyName, e)) {
+        if (!isInputFocused(keyName, e)) {
           return;
         }
 
         /** Handles back button */
         if (keyName === 'back') {
-          /** Guarantees that the 'back' button is enabled and navigation is enabled */
-          if (Keyboard.isBackspaceEnabled() && this.get().navigation.back) {
+          /** Guarantees that the 'back' button is enabled and navigable is enabled */
+          if (Keyboard.isBackspaceEnabled() && this.get().navigable.back) {
             e.preventDefault();
-            this._goBack();
+            if (this.root.router && this.root.router.get().path !== '/') {
+              this.root.router.back();
+            }
           }
           return;
         }
