--- a/packages/components/Dialog/Dialog.html
+++ b/packages/components/Dialog/Dialog.html
@@ -58,17 +58,18 @@
         document.activeElement.blur();
 
         if (this.root.meta) {
-          const { scrollable, navigation } = this.root.meta.get();
+          const { scrollable, navigable } = this.root.meta.get();
 
           /** Disable app scroll when opening a dialog */
+          /* istanbul ignore else */
           if (scrollable) {
             this.root.meta.set({ scrollable: false });
           }
 
-          this.set({ _previousNavigationObj: navigation });
-        }
+          this.set({ _previousNavigationObj: navigable });
 
-        this.root.fire('navigation', false);
+          this.root.meta.setNavigable(false);
+        }
 
         if (typeof duration !== 'undefined') {
           return this.close(duration);
@@ -96,12 +97,13 @@
       _close() {
         const { _previousNavigationObj } = this.get();
 
-        /** Let's unlock the app */
-        this.root.fire('navigation', _previousNavigationObj);
-
         /** Allow app to scroll again */
         if (this.root.meta) {
-          this.root.meta.set({ scrollable: true });
+          /** Let's unlock the app */
+          this.root.meta.set({
+            navigable: _previousNavigationObj,
+            scrollable: true,
+          });
         }
       },
     },
