--- a/packages/components/Printable/Printable.html
+++ b/packages/components/Printable/Printable.html
@@ -4,7 +4,7 @@
   </div>
 </div>
 
-{#if _state === STATES.PRINTING && showPrintingDialog}
+{#if _state === STATES.PRINTING}
   <Dialog
     ref:printingDialog
     bgColor="#fff"
@@ -53,7 +53,6 @@
         _state: STATES.IDLE,
         _paperWidth: PAPER_WIDTH,
         dithering: false,
-        showPrintingDialog: true,
         id: null,
       };
     },
@@ -62,6 +61,7 @@
       if (changed._state) {
         if (current._state === STATES.FAILURE) {
           this.refs.failureDialog.open();
+          this.fire('error');
         } else if (current._state === STATES.SUCCESS) {
           this.fire('finish', true);
         }
@@ -69,7 +69,7 @@
     },
     methods: {
       print(printerOptions) {
-        const { dithering, id, showPrintingDialog } = this.get();
+        const { dithering, id } = this.get();
         const contentEl = this.refs.printableContent;
 
         /** Default printing parameters */
@@ -82,9 +82,9 @@
           printerOptions,
         );
 
-        const _printingPromise = Printer.print(contentEl, printerOptions);
-
         if (printerOptions.print_to_paper === false) {
+          Printer.print(contentEl, printerOptions);
+
           /** If virtual printing (save printable img only), dispatch the finish event */
           return Promise.resolve().then(() => {
             this.fire('finish', true);
@@ -92,12 +92,9 @@
         }
 
         this.set({ _state: STATES.PRINTING });
+        this.refs.printingDialog.open();
 
-        if (showPrintingDialog) {
-          this.refs.printingDialog.open();
-        }
-
-        _printingPromise
+        Printer.print(contentEl, printerOptions)
           .then(() => this.set({ _state: STATES.SUCCESS }))
           .catch(() => this.set({ _state: STATES.FAILURE }));
 
