--- a/packages/styles/src/includes/components/row.pcss
+++ b/packages/styles/src/includes/components/row.pcss
@@ -6,6 +6,7 @@
   align-items: center;
   background-color: #fff;
   border-bottom: 2px solid $row-border-color;
+  font-size: 13px;
 
   &.-light {
     background-color: $gray-lightest;
