--- a/packages/pos/simulator/plugins/view/POS.html
+++ b/packages/pos/simulator/plugins/view/POS.html
@@ -89,6 +89,12 @@
     height: 100%;
   }
 
+  @media (max-width: 480px) {
+    :global(body) {
+      height: 100%;
+    }
+  }
+
   @media (min-width: 481px) {
     .wrapper {
       display: flex;
