--- a/packages/styles/src/includes/desktop/base.pcss
+++ b/packages/styles/src/includes/desktop/base.pcss
@@ -7,17 +7,28 @@ body {
   display: none;
 }
 
-@media (max-width: 480px) {
-  html[virtual-pos],
-  html[virtual-pos] body {
-    /* stylelint-disable-next-line */
-    scrollbar-width: none;
+/* stylelint-disable */
 
-    &::-webkit-scrollbar {
-      display: none;
-    }
+html[virtual-pos],
+html[virtual-pos] body,
+#app-root {
+  /* Hide all scrollbars for webkit based browsers */
+  /* Hide all scrollbars for firefox > 63 */
+  /* For now, must set the tag 'layout.css.scrollbar-width.enabled' to 'true' in 'about:config' */
+  /* https://developer.mozilla.org/en-US/docs/Web/CSS/scrollbar-width#Browser_Compatibility */
+  &::-webkit-scrollbar {
+    display: none;
+    width: 0px;
+    background: transparent;
+  }
+
+  &,
+  &::before,
+  &::after {
+    scrollbar-width: none;
   }
 }
+/* stylelint-enable */
 
 *::after,
 *::before,
