--- a/packages/components/Collection/example/Example.html
+++ b/packages/components/Collection/example/Example.html
@@ -1,6 +1,9 @@
 <div class="wrapper">
   <Collection title="Rede">
-    <Row label="1. Configurar" href="/network/configure" rightLabel="Selecionar"/>
+    <Row label="1. Configurar" href="/network/configure"/>
+    <Row label="1. Configurar"/>
+    <Row label="1. Configurar" rightLabel="Selecionar"/>
+    <Row label="1. Configurar" rightLabel="Selecionar" href="/"/>
   </Collection>
 
   <Collection title="Dispositivo">
