--- a/packages/pos/simulator/plugins/view/Launcher.html
+++ b/packages/pos/simulator/plugins/view/Launcher.html
@@ -1,4 +1,3 @@
-
 {#if STATE === STATES.APP}
   <div ref:approot id="app-root"></div>
 {:else}
@@ -19,7 +18,7 @@
 
     {#if STATE === STATES.HOME}
       <div class="home">
-        {#each Object.values(apps) as app}
+        {#each appsList as app}
           <div class="app-item" on:click="openApp(app)">
             <div class="content">
               <div class="icon">
@@ -65,6 +64,9 @@
         time: `${initHours}:${initMinutes}`,
         apps: {},
       };
+    },
+    computed: {
+      appsList: ({ apps }) => Object.values(apps),
     },
     oncreate() {
       /** Update the clock after each second */
