--- a/packages/components/Input/Input.html
+++ b/packages/components/Input/Input.html
@@ -74,10 +74,10 @@
         /** Validation */
         validateOn: 'submit',
         validation: undefined,
-        isValid: false,
+        isValid: undefined,
         _errorMsg: undefined,
         /** Mask */
-        mask: null,
+        mask: undefined,
         tokens: defaultTokens,
       };
     },
@@ -161,6 +161,29 @@
         }
         return value;
       },
+      _validate() {
+        const { value } = this.refs.input;
+        const { validation } = this.get();
+        const validateObj = {
+          isValid: true,
+          _errorMsg: undefined,
+        };
+
+        if (typeof validation !== 'function') {
+          return validateObj;
+        }
+
+        const result = validation(value);
+
+        if (typeof result === 'boolean') {
+          validateObj.isValid = result;
+        } else {
+          validateObj.isValid = !!result.isValid;
+          validateObj._errorMsg = result.msg;
+        }
+
+        return validateObj;
+      },
       // TODO: when '_visible' changes, it triggers a focus
       _onFocus(e) {
         const { alphanumeric } = this.get();
@@ -201,13 +224,15 @@
 
         if (key === 'enter') {
           const { validateOn, validation } = this.get();
-          if (validateOn === 'submit') {
-            const validationResult = this._getValidationResult();
 
-            this.set(validationResult);
+          /* istanbul ignore else */
+          if (validateOn === 'submit') {
+            const result = this._validate();
+
+            this.set(result);
 
             /** Blur the input if a validation is present and the input is valid */
-            if (validation && validationResult.isValid) {
+            if (typeof validation !== 'undefined' && result.isValid) {
               this.blur();
             }
           }
@@ -258,16 +283,18 @@
         }
 
         if (validation) {
-          if (validateOn === 'input') {
-            const validationResult = !value.length
-              ? { isValid: false, _errorMsg: undefined }
-              : this._getValidationResult();
-
-            this.set({ value, ...validationResult });
+          let validationUpdate;
+          /** If validation is on submit, reset the validation state */
+          if (validateOn === 'submit') {
+            validationUpdate = {
+              isValid: false,
+              _errorMsg: undefined,
+            };
           } else {
-            /** If validation is on submit, reset the isValid and errorMsg */
-            this.set({ value, isValid: false, _errorMsg: undefined });
+            validationUpdate = this._validate();
           }
+
+          this.set({ value, ...validationUpdate });
         } else {
           this.set({ value });
         }
@@ -289,17 +316,6 @@
           /* istanbul ignore next */
           setTimeout(() => this.refs.input && this.focus());
         }
-      },
-      _getValidationResult() {
-        const { value } = this.refs.input;
-        const { validation } = this.get();
-
-        if (validation) {
-          const { msg: _errorMsg = null, isValid = true } = validation(value);
-          return { _errorMsg, isValid };
-        }
-
-        return { _errorMsg: undefined, isValid: true };
       },
     },
   };
