Centralize the Virtual POS

--- a/packages/pos/simulator/plugins/view/POS.html
+++ b/packages/pos/simulator/plugins/view/POS.html
@@ -82,15 +82,12 @@
 </script>
 
 <style type="text/postcss">
-  .wrapper,
-  .container,
-  .pos-wrapper,
-  .pos {
-    height: 100%;
-  }
-
   @media (max-width: 480px) {
-    :global(body) {
+    :global(body),
+    .wrapper,
+    .container,
+    .pos-wrapper,
+    .pos {
       height: 100%;
     }
   }
